--- a/app/business/buztabs/map/map.page.scss
+++ b/app/business/buztabs/map/map.page.scss
@@ -139,6 +139,7 @@ ion-button.ios{
         --border-radius: 20px;
         --background-checked:#152c01;
         --indicator-color:#152c01;
+        border-radius: 0;
     }
 }
 
