--- a/app/tabs/about/about.page.scss
+++ b/app/tabs/about/about.page.scss
@@ -124,6 +124,9 @@ ion-card{
  
 .menus{
     margin-bottom: 80px;
+    padding-top: 0px;
+    margin-top: -15px;
+
     ion-item{
         margin: 15px 8px;
         border-bottom: 1px solid;
